<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/txtViewTituloMainActivity"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/txtView_titulo"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/cinza_escuro"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTituloMainActivity">

        <Spinner
            android:id="@+id/spinnerDisciplina"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:dropDownWidth="145dp"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAlarme"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/cinza_escuro"
        android:onClick="timePickerDialog"
        android:text="@string/btn_alarme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDisciplina" />

    <Button
        android:id="@+id/btnAgendar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="agendar"
        android:text="@string/btn_agendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlarme" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="cancelar"
        android:text="@string/btn_cancelar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlarme" />

</androidx.constraintlayout.widget.ConstraintLayout>